--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,108 @@
     font-size: 20px;
     color: rgb(85, 29, 0);
 }
+
+@media only screen and (max-width : 815px) {
+    #fakebody {
+        width: 100%;
+        height: 450px;
+    }
+    
+    #chara {
+        height: 300px;
+        top: 90px;
+    }
+
+    #banner {
+        top: 300px;
+        right: 0;
+    }
+    
+    #icons {
+        font-size: 20px;
+        width: 100%;
+        top: 20px;
+    }
+    
+    .fa {
+        margin: 10px;
+        font-size: 40px;
+    }
+    
+    .newHero {
+        right: 15px;
+        top: 70px;
+        font-size: 16px;
+        color: white;
+        z-index: 3;
+        color: red;
+    }
+    
+    .fa-child {
+        right: 20px;
+        top: 10px;
+        color: red;
+        z-index: 2;
+        font-size: 40px;
+    }
+    
+    #background {
+        height: 100%;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width : 690px) {
+    #chara {
+        height: 300px;
+        position: absolute;
+        right: 0;
+        top: 260px;
+    }
+    
+    #fakebody {
+        width: 100%;
+        height: 650px;
+    }
+
+    #banner {
+        z-index: 1;
+        height: 130px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        width: 95%;
+        max-width: 900px;
+        position: absolute;
+        top: 500px;
+        right: 0;
+        margin: auto;
+        background-image: url(https://github.com/vsogawa/fireemblemtest/blob/master/img/TextBox.png?raw=true);
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 20px;
+    }
+    
+    #icons {
+        font-size: 20px;
+        color: white;
+        text-align: left;
+        margin: 0 auto 30px auto;
+        position: absolute;
+        left: 20px;
+        top: 20px;
+    }
+    
+    .newHero {
+        right: 25px;
+        top: 100px;
+    }
+    
+    .left {
+        margin-left: 9vw;
+    }
+    
+    .fa-child {
+        right: 30px;
+        top: 40px;
+    }
+}
